--- a/deployment MRS/frontend/index.html
+++ b/deployment MRS/frontend/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>Medical Report Summarizer</title>
-  <link rel="stylesheet" href="/static/style.css?v=1.2">
+  <link rel="stylesheet" href="style.css?v=1.2">
 </head>
 <body>
   <h1>Medical Report Summarizer</h1>
@@ -23,6 +23,6 @@
     <div id="summary"></div>
   </div>
 
-  <script src="/static/app.js?v=1.2"></script>
+  <script src="app.js?v=1.2"></script>
 </body>
 </html>
