--- a/deployment MRS/frontend/index.html
+++ b/deployment MRS/frontend/index.html
@@ -3,8 +3,9 @@
 <head>
   <meta charset="UTF-8">
   <title>Medical Report Summarizer</title>
-  <<link rel="stylesheet" href="/style.css?v=1.2">
-
+  <link rel="stylesheet" href="/style.css?v=1.2">
+  <!-- optional: remove favicon if not available -->
+  <!-- <link rel="icon" href="/favicon.ico" type="image/x-icon"> -->
 </head>
 <body>
   <h1>Medical Report Summarizer</h1>
@@ -27,4 +28,3 @@
   <script src="/app.js?v=1.2"></script>
 </body>
 </html>
-
